# VocalShaperProject4

./: .gitignore  CMakeLists.txt  README.md  vsp4-config.cmake.in
cxx/: VSP4.h.in
proto/: MainGraph.proto  MixerTrack.proto  Plugin.proto  Project.proto  Recorder.proto  SeqTrack.proto  Source.proto  Track.proto  Utils.proto
